[gd_scene load_steps=8 format=3 uid="uid://brhoitveady62"]

[ext_resource type="Script" path="res://scripts/games/donkey_kong/hammer.gd" id="1_8wnkf"]
[ext_resource type="Texture2D" uid="uid://j5xnd5min74s" path="res://assets/games/donkey_kong/lightsaber.png" id="2_rbt64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4cyxk"]
size = Vector2(64, 93)

[sub_resource type="CircleShape2D" id="CircleShape2D_u3sue"]
radius = 32.0

[sub_resource type="Animation" id="Animation_fpdmq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HammerTexture:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3s0su"]
resource_name = "hit"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HammerTexture:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rjn6h"]
_data = {
"RESET": SubResource("Animation_fpdmq"),
"hit": SubResource("Animation_3s0su")
}

[node name="Hammer" type="Node2D"]
script = ExtResource("1_8wnkf")

[node name="HammerTexture" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="HammerTexture"]
position = Vector2(0, -48.5)
scale = Vector2(2, 2)
texture = ExtResource("2_rbt64")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HammerTexture"]
position = Vector2(0, -63.5)
shape = SubResource("RectangleShape2D_4cyxk")

[node name="EnterArea" type="Area2D" parent="."]
position = Vector2(0, -36.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterArea"]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_u3sue")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rjn6h")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 9.0
one_shot = true

[connection signal="body_entered" from="HammerTexture" to="." method="_on_hammer_texture_body_entered"]
[connection signal="body_entered" from="EnterArea" to="." method="_on_enter_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
